syntax = "proto3";

package healthapp.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto"; // For optional fields
import "healthapp/v1/common.proto";

option go_package = "github.com/atreya2011/health-management-api/internal/infrastructure/rpc/gen/healthapp/v1;healthappv1";

message ExerciseRecord {
  string id            = 1;  // UUID string
  string user_id       = 2;  // UUID string
  string exercise_name = 3;  // e.g., "Running", "Weight Lifting"
  google.protobuf.Int32Value duration_minutes =
      4;  // Optional: Duration in minutes
  google.protobuf.Int32Value calories_burned =
      5;  // Optional: Estimated calories burned
  google.protobuf.Timestamp recorded_at =
      6;  // When the exercise was performed/logged
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

service ExerciseRecordService {
  // Create a new exercise record.
  // Requires authentication.
  rpc CreateExerciseRecord(CreateExerciseRecordRequest)
      returns (CreateExerciseRecordResponse);

  // List exercise records for the authenticated user, paginated.
  // Requires authentication.
  rpc ListExerciseRecords(ListExerciseRecordsRequest)
      returns (ListExerciseRecordsResponse);

  // Delete an exercise record.
  // Requires authentication.
  rpc DeleteExerciseRecord(DeleteExerciseRecordRequest)
      returns (DeleteExerciseRecordResponse);
}

message CreateExerciseRecordRequest {
  string                     exercise_name    = 1;
  google.protobuf.Int32Value duration_minutes = 2;
  google.protobuf.Int32Value calories_burned  = 3;
  google.protobuf.Timestamp  recorded_at =
      4;  // Optional: defaults to current time if not provided
}

message CreateExerciseRecordResponse {
  ExerciseRecord exercise_record = 1;
}

message ListExerciseRecordsRequest {
  PageRequest pagination = 1;
}

message ListExerciseRecordsResponse {
  repeated ExerciseRecord exercise_records = 1;
  PageResponse            pagination       = 2;
}

message DeleteExerciseRecordRequest {
  string id = 1;  // UUID of the exercise record to delete
}

message DeleteExerciseRecordResponse {
  bool success = 1;
}
